2013-12-28  Glenn Morris  <rgm@gnu.org>

	* gnus-icalendar.el (gnus-icalendar-org, gnus-icalendar):
	* gnus-sum.el (gnus-subthread-sort-functions): Add version.
	* gnus-sync.el (gnus-sync-file-encrypt-to): Add type and version.

	* auth-source.el (auth-sources):
	* nnmairix.el (nnmairix-propagate-marks-upon-close):
	Fix custom types.

	* tls.el (tls-certtool-program): Fix default value.

2013-12-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-respool-query): Special-case nnimap so that
	we get proper traces there, too.

2013-12-26  Sean Connor  <sconnor005@allyinics.org>  (tiny change)

	* gnus-sum.el (gnus-summary-enter-digest-group): Don't discard previous
	value of the parameters if the current article has a Reply-To or From
	field.

2013-12-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-group-buffer): Remove duplicate definition.

2013-12-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-exit): Stop animations.

2013-12-19  Juri Linkov  <juri@jurta.org>

	* gnus.el (gnus-suppress-keymap):
	* gnus-art.el (gnus-article-mode-map):
	* gnus-group.el (gnus-group-mode-map):
	* gnus-sum.el (gnus-summary-mode-map, gnus-summary-backend-map):
	Remove [backspace] key binding because it shadows DEL (bug#16035).

	* mm-decode.el (mm-viewer-completion-map): Remove duplicate definition.

2013-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-uu.el (gnus-uu-decode-binhex, gnus-uu-decode-binhex-view):
	Make sure work directory exists.
	(gnus-uu-digest-mail-forward): Store temporary files in work directory
	rather than tmp directory.
	(gnus-summary-prepare-exit-hook): Replace gnus-exit-group-hook, that is
	not necessarily always run, with it.

2013-12-18  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-identities): Make changing the
	value of gnus-icalendar-additional-identities work without restart.

2013-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-make-temp-file):