@@ -46,21 +46,20 @@
   :group 'gnus-sieve)
 
 (defcustom gnus-sieve-region-start "\n## Begin Gnus Sieve Script\n"
-  "Line indicating the start of the autogenerated region in
-your Sieve script."
+  "Line indicating the start of the autogenerated region in your Sieve script."
   :type 'string
   :group 'gnus-sieve)
 
 (defcustom gnus-sieve-region-end "\n## End Gnus Sieve Script\n"
-  "Line indicating the end of the autogenerated region in
-your Sieve script."
+  "Line indicating the end of the autogenerated region in your Sieve script."
   :type 'string
   :group 'gnus-sieve)
 
 (defcustom gnus-sieve-select-method nil
   "Which select method we generate the Sieve script for.
-
 For example: \"nnimap:mailbox\""
+  ;; FIXME? gnus-select-method?
+  :type '(choice (const nil) string)
   :group 'gnus-sieve)
 
 (defcustom gnus-sieve-crosspost t
